argocd/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd
  namespace: argocd
spec:
  gatewayClassName: nginx
  listeners:
    - hostname: argocd.local
      name: argocd-http
      port: 80
      protocol: HTTP
    - hostname: demo.local
      name: demo-http
      port: 80
      protocol: HTTP
    - hostname: argocd.local
      name: argocd-https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - kind: Secret
            name: argocd-server-tls
