argocd/gateway/http-routes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  hostnames:
    - argocd.local
  parentRefs:
    - name: nginx-shared-gateway
      namespace: nginx-shared-gateway
      sectionName: http
    - name: nginx-shared-gateway
      namespace: nginx-shared-gateway
      sectionName: argocd-https
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
